--- a/index.html
+++ b/index.html
@@ -11,24 +11,28 @@
 </head>
 <body>
     <header>
-        <div>
-            <img class="logo" src="assets/Star 1.svg" alt ="Star">
+        <div class="logo" >
+            <img src="assets/Star 1.svg" alt ="Star">
             <h1>Ink. House</h1>
         </div>
-        <div>
-            <button>Репродукция</button>
-            <button> Новинки </button>
-            <button> О нас </button>
-            <button> <img src="assets/korzina.svg" alt ="korzina"></button>
-        </div>
+        <nav class="nav-flex">
+            <a href="#">Репродукция</a>
+            <a href="#">Новинки</a>
+            <a href="#"> О нас</a>
+            <a href="#"><img src="assets/korzina.svg" alt ="korzina"></a>
+        </nav>
     </header>
     <main>
         <section>
-            <img src="assets/gl_ptica.svg" alt ="gl_ptica">
-            <h2> Реплики картин от <h3> Ink. House </h3> </h2>
-            <p>Высокое качество отрисовки на плотной бумаге или льняном 
-                холсте. Редкие произведения, доступные цены.</p>
-            <button> Продукция </button>
+            <img class="gl_ptica" src="assets/gl_ptica.svg" alt ="gl_ptica">
+            <div class="list_1_text">
+                
+                    <h2 class="h23"> Реплики картин от <h3 class="h23"> Ink. House </h3> </h2>
+               
+                <p class="text_1">Высокое качество отрисовки на плотной бумаге или льняном 
+                    холсте. Редкие произведения, доступные цены.</p>
+                <button class="button_1"> Продукция </button>
+            </div>
         </section>
         <section>
             <div> 
