--- a/index.html
+++ b/index.html
@@ -35,24 +35,22 @@
             </div>
         </section>
         <section>
-            <h4> Репродукция </h4>
-            <input type="checkbox" id="toggle">
-            <label for="toggle" class="toggle-label"> Переключить</label>
+            <div class="reprodukcui">
+                <h4> Репродукция </h4>
 
-            <div class="first content"> 
+                <input type="checkbox" id="toggle_1">
+                <label for="toggle_1" class="toggle-label_1">Франция</label>
+
                 
-                <div >
-                   <h3>Франция</h3> 
-                   <div>
+                <div class="first content"> 
+                    <div>
                         <div>
-                            <div>
-                                <img src="assets/oxota_amyra.svg" alt ="oxota_amyra">
-                                <p>Марсель Руссо</p>
-                                <h4> Охота Амура</h4>
-                                <p> Холст, масло (50х80)</p>
-                                <p> 14 500 руб</p>
-                                <button> В корзину</button>
-                            </div>
+                            <img src="assets/oxota_amyra.svg" alt ="oxota_amyra">
+                            <p>Марсель Руссо</p>
+                            <h4> Охота Амура</h4>
+                            <p> Холст, масло (50х80)</p>
+                            <p> 14 500 руб</p>
+                            <button> В корзину</button>
                         </div>
                         <div>
                             <img src="assets/dama_s_sobachkou.svg" alt ="dama_s_sobachkou">
@@ -96,19 +94,18 @@
                         </div>
                     </div>
                 </div>
-            </div>
-            <div class="second content"> 
-                    <h3> Германия</h3>
+                
+                <input type="checkbox" id="toggle_2">
+                <label for="toggle_2" class="toggle-label_2">Германия</label>
+                <div class="second content"> 
                     <div>
                         <div>
-                            <div>
-                                <img src="assets/nad_ogorodom.svg" alt ="nad_ogorodom">
-                                <p>Курт Вернер</p>
-                                <h4> Над городом</h4>
-                                <p> Цветная литография (40х60) </p>
-                                <p> 16 000 руб</p>
-                                <button> В корзину</button>
-                            </div>
+                            <img src="assets/nad_ogorodom.svg" alt ="nad_ogorodom">
+                            <p>Курт Вернер</p>
+                            <h4> Над городом</h4>
+                            <p> Цветная литография (40х60) </p>
+                            <p> 16 000 руб</p>
+                            <button> В корзину</button>
                         </div>
                         <div>
                             <img src="assets/ptenc.svg" alt ="ptenc">
@@ -151,61 +148,61 @@
                             <button> В корзину</button>
                         </div>
                     </div>
-            </div>
-            <div class="third content">
-                    <h3> Англия</h3>
+                </div>
+
+                <input type="checkbox" id="toggle_3">
+                <label for="toggle_3" class="toggle-label_3">Англия</label>
+                <div class="third content"> 
                     <div>
                         <div>
-                            <div>
-                                <img src="assets/nad_ogorodom.svg" alt ="nad_ogorodom">
-                                <p>Курт Вернер</p>
-                                <h4> Над городом</h4>
-                                <p> Цветная литография (40х60) </p>
-                                <p> 16 000 руб</p>
-                                <button> В корзину</button>
-                            </div>
-                        </div>
-                        <div>
-                            <img src="assets/ptenc.svg" alt ="ptenc">
-                            <p>Макс Рихтер</p>
-                            <h4> Птенцы</h4>
-                            <p> Холст, масло (50х80)  </p>
-                            <p> 14 500 руб</p>
+                            <img src="assets/diki_zver.svg" alt ="diki_zver">
+                            <p>Пол Смит</p>
+                            <h4> Дикий зверь</h4>
+                            <p> Акварель, бумага (50х80)  </p>
+                            <p> 19 500 руб</p>
                             <button> В корзину</button>
                         </div>
                         <div>
-                            <img src="assets/sredi_listev.svg" alt ="sredi_listev">
-                            <p>Мартин Майер</p>
-                            <h4> Среди листьев</h4>
+                            <img src="assets/skalist_bereg.svg" alt ="ptenc">
+                            <p>Джон Уайт</p>
+                            <h4>Скалистый берег</h4>
                             <p> Цветная литография (40х60)  </p>
-                            <p> 20 000 руб</p>
+                            <p> 17 500 руб</p>
                             <button> В корзину</button>
                         </div>
                         <div>
-                            <img src="assets/irki_ptica.svg" alt ="irki_ptica">
-                            <p>Герман Беккер</p>
-                            <h4> Яркая птица</h4>
+                            <img src="assets/reka_gor.svg" alt ="reka_gor">
+                            <p>Джим Уотсон</p>
+                            <h4> Река и горы</h4>
+                            <p> Акварель, бумага (50х80)   </p>
+                            <p> 20 500 руб</p>
+                            <button> В корзину</button>
+                        </div>
+                        <div>
+                            <img src="assets/bel_popygau.svg" alt ="bel_popygau">
+                            <p>Юджин Зиллион</p>
+                            <h4> Белый попугай</h4>
                             <p> Цветная литография (40х60)    </p>
-                            <p> 13 000 руб</p>
+                            <p> 15 500 руб</p>
                             <button> В корзину</button>
                         </div>
                         <div>
-                            <img src="assets/ditl.svg" alt ="ditl">
-                            <p>Вульф Бауэр</p>
-                            <h4> Дятлы</h4>
+                            <p>Эрик Гиллман</p>
+                            <h4>Ночная рыба</h4>
                             <p> Бумага, акрил (50х80)  </p>
-                            <p> 20 000 руб</p>
+                            <p> 12 500 руб</p>
                             <button> В корзину</button>
                         </div>
                         <div>
                             <img src="assets/bolshie_vod.svg" alt ="bolshie_vod">
-                            <p>Вальтер Хартманн</p>
-                            <h4> Большие воды </h4>
-                            <p> Бумага, акрил (50х80)  </p>
-                            <p> 23 000 руб</p>
+                            <p>Альфред Барр</p>
+                            <h4>Рыжий кот </h4>
+                            <p> Цветная литография (40х60)  </p>
+                            <p> 21 000 руб</p>
                             <button> В корзину</button>
                         </div>  
                     </div>
+                </div>
             </div>
         </section>
         <section>
