--- a/index.html
+++ b/index.html
@@ -1,37 +1,37 @@
-<!Doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset ='UTF-8'>
-    <meta name ='viewport' content ='width = device-width,initial = 1.0' >
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link href="style.css" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header>
-        <div class="logo" >
-            <img src="assets/Star 1.svg" alt ="Star">
-            <h1>Ink. House</h1>
+    <header class="header">
+        <div class="container header-flex">
+            <img src="assets/star_1_logo.svg" alt="Logo">
+            <div class="header-links">
+                <a class="header-link" href="#">Репродукции</a>
+                <a class="header-link" href="#">Новинки</a>
+                <a class="header-link" href="#">О нас</a>
+                <button class="header-button"><img src="assets/korzina.svg" alt ="korzina"></button>
+            </div>
         </div>
-        <nav class="nav-flex">
-            <a href="#">Репродукция</a>
-            <a href="#">Новинки</a>
-            <a href="#"> О нас</a>
-            <a href="#"><img src="assets/korzina.svg" alt ="korzina"></a>
-        </nav>
     </header>
     <main>
         <section>
-            <img class="gl_ptica" src="assets/gl_ptica.svg" alt ="gl_ptica">
-            <div class="list_1_text">
-                <div class="h2_span">
-                    <h2 > Реплики картин от  <span  >Ink. House</span> </h2>
+            <div  class="container about">
+                <img src="assets/gl_ptica.svg" alt ="gl_ptica">
+                <div class="about-right">
+                    <h1  class="about-title" > Реплики картин от  <span  >Ink. House</span> </h1>
+                    </div>
+                    <p class="about-text">Высокое качество отрисовки на плотной бумаге или льняном 
+                        холсте. Редкие произведения, доступные цены.</p>
+                    <button class="about-button"> Продукция </button>
                 </div>
-                <p class="text_1">Высокое качество отрисовки на плотной бумаге или льняном 
-                    холсте. Редкие произведения, доступные цены.</p>
-                <button class="button_1"> Продукция </button>
             </div>
         </section>
         <section>
