--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@
                 <img src="assets/gl_ptica.svg" alt ="gl_ptica">
                 <div class="about-right">
                     <h1  class="about-title" > Реплики картин от  <span  >Ink. House</span> </h1>
-                    </div>
                     <p class="about-text">Высокое качество отрисовки на плотной бумаге или льняном 
                         холсте. Редкие произведения, доступные цены.</p>
                     <button class="about-button"> Продукция </button>
@@ -35,14 +34,14 @@
             </div>
         </section>
         <section>
-    
-            <div class="container ">
+            <div class="container">
                 <div class="works-up">
                     <h4 class="works-up-title"> Репродукция </h4>
-    
-                    <button class="works-buttom-active">Франция</button>
-                    <button class="works-buttom works-second-buttom">Германия</button>
-                    <button class="works-buttom">Англия</button>
+                    <div>
+                        <button class="works-buttom-active">Франция</button>
+                        <button class="works-buttom works-second-buttom">Германия</button>
+                        <button class="works-buttom">Англия</button>
+                    </div>
                 </div>     
                 <div class="work-down">
                     <div class="work-example">
@@ -268,11 +267,13 @@
                 </div>
             </div> -->
         </section>
-        <section>
-            <div>
-                <img src="assets/Star 2.svg" alt ="star 2">
-                <h5> Новая коллекция французских авторов </h5>
-                <div>
+        <section class="new-collection">
+            <div class="container">
+                <div class="new-collection-title">
+                    <img src="assets/Star 2.svg" alt ="star 2">
+                    <h2> Новая коллекция французских авторов </h2>
+                </div>
+                <div class="new-collection-text">
                     <p> Сложно сказать, почему акционеры крупнейших компаний
                         призывают нас к новым свершениям, которые, в свою 
                         очередь, должны быть заблокированы в рамках своих 
@@ -281,20 +282,24 @@
                         обучения кадров предопределяет высокую
                         востребованность направлений прогрессивного развития.</p>
                 </div>
-                <button> Ознакомится </button>
+                <button  class="new-collection-button"> Ознакомится </button>
             </div>
         </section>
         <section> 
-            <img src="assets/ryka_ramka.svg" alt ="ryka_ramka">
-            <div>
-                <h4> Наша команда </h4>
-                <p> Значимость этих проблем настолько очевидна, что базовый вектор 
-                    развития позволяет оценить значение экспериментов, поражающих 
-                    по своей масштабности и грандиозности. Мы вынуждены отталкиваться 
-                    от того, что консультация с широким активом.</p>
-                <img src="assets/women_1.svg " alt ="women_1">
-                <img src="assets/men_2.svg " alt ="men_2">
-                <img src="assets/men_3.svg " alt ="men_3">
+            <div class="container team">
+                <img src="assets/ryka_ramka.svg" alt ="ryka_ramka">
+                <div class="team-text" >
+                    <h2 class="works-up-title"> Наша команда </h2>
+                    <p> Значимость этих проблем настолько очевидна, что базовый вектор 
+                        развития позволяет оценить значение экспериментов, поражающих 
+                        по своей масштабности и грандиозности. Мы вынуждены отталкиваться 
+                        от того, что консультация с широким активом.</p>
+                    <div class="team-image">
+                        <img src="assets/women_1.svg " alt ="women_1">
+                        <img src="assets/men_2.svg " alt ="men_2">
+                        <img src="assets/men_3.svg " alt ="men_3">
+                    </div>
+                </div>
             </div>
         </section>
     </main>
