--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
         <div class="container header-flex">
             <img src="assets/star_1_logo.svg" alt="Logo">
             <div class="header-links">
-                <a class="header-link" href="#">Репродукции</a>
-                <a class="header-link" href="#">Новинки</a>
-                <a class="header-link" href="#">О нас</a>
+                <a class="header-link" href="#countries">Репродукции</a>
+                <a class="header-link" href="#finish">Новинки</a>
+                <a class="header-link" href="#finish">О нас</a>
                 <button class="header-button"><img src="assets/korzina.svg" alt ="korzina"></button>
             </div>
         </div>
@@ -33,7 +33,7 @@
                 </div>
             </div>
         </section>
-        <section>
+        <section id="countries">
             <div class="container">
                 <div class="works-up">
                     <h4 class="works-up-title"> Репродукция </h4>
@@ -285,7 +285,7 @@
                 <button  class="new-collection-button"> Ознакомится </button>
             </div>
         </section>
-        <section> 
+        <section id="people"> 
             <div class="container team">
                 <img src="assets/ryka_ramka.svg" alt ="ryka_ramka">
                 <div class="team-text" >
@@ -303,34 +303,47 @@
             </div>
         </section>
     </main>
-    <foater>
-        <div>
-            <img class="logo" src="assets/star_1_logo.svg" alt ="star_1_logo">
-            <p>+7 (999) 543-54-54</p>
-            <p> Мастерская</p>
+    <footer id="finish">
+        <div class="container footer-flex ">
+            <div class="contacts">
+                <img class="logo" src="assets/star_1_logo.svg" alt ="star_1_logo">
+                <div>
+                    <p class="contact-phone">+7 (999) 543-54-54</p>
+                    <p> Мастерская</p>
+                </div>
+            </div>
+            <div class="footer-right">
+                <div class="footer-links">
+                    <div class="footer-link"> 
+                        <h3>Репродукция</h3>
+                        <a href="#countries"> Франция </a>
+                        <a href="#countries"> Германия</a>
+                        <a href="#countries"> Англия</a>
+                    </div>
+                    <div class="footer-link">
+                        <h3>Новинки</h3>
+                        <a href="#"> 2021</a>
+                        <a href="#"> 2020 </a>
+                    </div>
+                    <div class="footer-link">
+                        <h3> О нас</h3>
+                        <a href="#people"> Художники</a>
+                        <a href="#people"> Менеджеры </a>
+                    </div>
+                </div>
+                <div>
+                    <div class="footer-social">
+                        <a  href="https://www.facebook.com/" target="_blank"><img src="assets/f.svg " alt ="f"></a>
+                        <a href="https://www.instagram.com/" class="social-second"><img src="assets/insta.svg " alt ="insta"></a>
+                        <a href="https://www.youtube.com/" target="_blank"><img src="assets/youtube.svg " alt ="youtube"></a>
+                    </div>
+                    <div class="footer-info">
+                        <p> Ink. House ®</p>
+                        <p>All rights reserved</p>
+                    </div>
+                </div>
+            </div>
         </div>
-        <div>
-             <h6>Репродукция</h6>
-             <p> Франция </p>
-             <p> Германия</p>
-             <p> Англия</p>
-        </div>
-        <div>
-            <h6>Новинки</h6>
-            <p> 2021</p>
-            <p> 2020 </p>
-       </div>
-       <div>
-            <h6> О нас</h6>
-            <p> Художники</p>
-            <p> Менеджеры </p>
-        </div>
-        <div>
-            <img src="assets/f.svg " alt ="f">
-            <img src="assets/insta.svg " alt ="insta">
-            <img src="assets/youtube.svg " alt ="youtube">
-        </div>
-        <p> Ink. House ®</p>
-        <p>All rights reserved</p>
-    </foater>
+    </footer>
+</body>
    
