--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <main>
         <section>
             <div  class="container about">
-                <img src="assets/gl_ptica.svg" alt ="gl_ptica">
+                <img class="gl_ptica" src="assets/gl_ptica.svg" alt ="gl_ptica">
                 <div class="about-right">
                     <h1  class="about-title" > Реплики картин от  <span  >Ink. House</span> </h1>
                     <p class="about-text">Высокое качество отрисовки на плотной бумаге или льняном 
@@ -287,7 +287,7 @@
         </section>
         <section id="people"> 
             <div class="container team">
-                <img src="assets/ryka_ramka.svg" alt ="ryka_ramka">
+                <img class="ryka_ramka" src="assets/ryka_ramka.svg" alt ="ryka_ramka">
                 <div class="team-text" >
                     <h2 class="works-up-title"> Наша команда </h2>
                     <p> Значимость этих проблем настолько очевидна, что базовый вектор 
@@ -331,7 +331,7 @@
                         <a href="#people"> Менеджеры </a>
                     </div>
                 </div>
-                <div>
+                <div class="social_seti">
                     <div class="footer-social">
                         <a  href="https://www.facebook.com/" target="_blank"><img src="assets/f.svg " alt ="f"></a>
                         <a href="https://www.instagram.com/" class="social-second"><img src="assets/insta.svg " alt ="insta"></a>
